// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea.ts should render component and match snapshot 1`] = `
<div class="input text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" placeholder="Default"></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with custom classes and match snapshot 1`] = `
<div class="input text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Solo custom</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control dark:bg-transparent"><textarea id="text-area-1" class="input__input text-area__input resize-none dark:placeholder-blue-500" placeholder="Solo custom"></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with disabled prop and match snapshot 1`] = `
<div class="input input--disabled text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" placeholder="Default" disabled=""></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with loading prop and match snapshot 1`] = `
<div class="input text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" placeholder="Default"></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with name, required, readonly props and match snapshot 1`] = `
<div class="input text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" name="text-field-name" required="" placeholder="Default" readonly=""></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with singleLine prop and match snapshot 1`] = `
<div class="input text-area">
  <!---->
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" placeholder="Default"></textarea>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with slots and match snapshot 1`] = `
<div class="input text-area">
  <!---->
  <!---->
  <div class="input__control input__control--has-prepend input__control--has-append text-area__control"><i class="icon text-gray-100 dark:text-gray-200 flex-shrink-0" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="prepend-icon"></path>
        </g>
      </svg></i>Prepend slot<textarea id="text-area-1" class="input__input input__input--has-prepend input__input--has-append text-area__input resize-none"></textarea>Append slot<i class="icon text-gray-100 dark:text-gray-200 flex-shrink-0" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="append-icon"></path>
        </g>
      </svg></i>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render focused component and match snapshot 1`] = `
<div class="input input--focused text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control text-area__control"><textarea id="text-area-1" class="input__input text-area__input resize-none" placeholder="Default"></textarea>
    <!---->
    <!---->
  </div>
</div>
`;
